# nerest_prime

./: README.md  docker-compose.yml
client/: Dockerfile  client.py  requirements.txt
server/: CMakeLists.txt  Dockerfile  rpc_server.cpp
server/AMQP-CPP-2.1.4/amqpcpp/: callbacks.h
